reorganize and remove unused classes