@@ -1,5 +1,6 @@
 package info.developia.collection.utils.join;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 import java.util.function.Function;
@@ -7,9 +8,14 @@ import java.util.stream.Collectors;
 
 public class Joiner {
 
-    public static <T, G, F> List<G> common(List<G> list, List<G> filter, Function<T, F> by) {
-        Set<F> dict = filter.stream().map(item -> by.apply((T) item)).collect(Collectors.toSet());
-        return list.stream().filter(item -> dict.contains(by.apply((T) item))).collect(Collectors.toList());
+    public static <C, T, F> List<T> common(List<T> list, List<T> filter, Function<C, F> by) {
+        Set<F> dictionary = filter.stream().map(item -> by.apply((C) item)).collect(Collectors.toSet());
+        return list.stream().filter(item -> dictionary.contains(by.apply((C) item))).toList();
     }
 
+    public static <T, G> List<G> fromArrayToList(T[] a, Function<T, G> mapperFunction) {
+        return Arrays.stream(a)
+                .map(mapperFunction)
+                .collect(Collectors.toList());
+    }
 }
